# chatbot_qa

./: .env  .gitignore  Makefile  README.md  pyproject.toml  q.json  q.txt  requirements.txt
data/: sqldb.db
data/chromadb/163473cd-4c9b-47b0-82d6-c9a16b74b9ab/: index_metadata.pickle
data/csv/: freelancer_earnings.csv
src/: bot.py  config.py  vanna_app.py  vanna_train.py
src/cmd/: map_csv_to_sqldb.py
src/utils/: dto.py  prepare_csv_to_sqlite.py
